fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,10 +271,13 @@ section {
 
 /* REACH OUT STYLES END */
 
-/* secondary page hero */
-.hero-secondary {
-  margin: 20px;
-  background-color: black;
-  font-size: 20px;
-  color: red;
+/* REACH OUT STYLES END */
+
+/* UTILITIES */
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
 }
